tests/negative/regression/r22.orng
fn main() -> Int { 
    let const ident = { return }
} 
